darkened cover image and fixed twitter logo misalignment

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -135,7 +135,7 @@ body {
     background: rgba(0,0,0,0.6);
 }
 
-/* .site-header:after {
+.site-header:after {
     content: "";
     position: absolute;
     top: 0;
@@ -146,7 +146,7 @@ body {
     display: block;
     height: 80px;
     background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0));
-} */
+}
 
 .site-header.no-cover:before,
 .site-header.no-cover:after {
